2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		New file.

	* mingw.sh:
		Set svn:executable property.
		Use src/Makefile.w32.

2007-07-05  Michael Riepe  <too-tired@users.sourceforge.net>

	Added svn:keyword property for all files except src/*.ui
	(I don't want to confuse Qt designer).

2007-07-04  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Use _lseeki64 on Windows.
		Only seek if necessary.
		Try to read a buffer full of data.

	* src/dvbcut.cpp:
		Remember last used load directory for Open.
 
	* src/settings.cpp:
	* src/settings.h:
		Add "lastdir" setting.

2007-07-03  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
		Use fstat/_fstati64 to obtain the file size. This is
		required to overcome the 2 GB limit on 32-bit systems
		(Windows in particular).

	* src/defines.h:
		Better defaults for multi-file mode.

2007-07-02  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
	* src/dvbcut.cpp:
		"play multiple files" patch by Ralph Glasstetter.

2007-06-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp (class inbuffer):
	* src/buffer.h (class inbuffer):
		Support multiple input files.

	* src/dvbcut.cpp:
	* src/dvbcut.h:
		Open multiple input files.
		Read & write new project file format.
		Factor out pathname canonicalization.

	* src/main.cpp:
		Open multiple input files.

	* src/mpgfile.cpp:
		Use number of frames for bitrate estimation.

2007-06-29  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp (class inbuffer):
	* src/buffer.h (class inbuffer):
		Let open() return bool.
		Remove copy constructor for inbuffer.
		Add reset() member for inbuffer reuse.
 
	* src/dvbcut.h:
	* src/dvbcut.cpp:
		Add reusable inbuffer member to class dvbcut.
		Pass inbuffer to mpgfile::open().
 
	* src/main.cpp:
		Centralize option handling.
		Pass inbuffer to mpgfile::open().
 
 	* src/mpgfile.h:
 	* src/mpgfile.cpp: