@@ -1,3 +1,7 @@
+#! /bin/sh
+make -C src -f Makefile.w32
+exit
+# original version (included for reference only):
 TOP=$(pwd)
 which gcc
 if true; then
@@ -6,8 +10,6 @@ echo "*** Building FFMPEG..."
 make -C ffmpeg.src installlib
 make -C ffmpeg.src clean
 fi
-make -C src -f Makefile.w32
-exit
 cd src
 #qt3to4.exe *.cpp *.h
 
