@@ -35,7 +35,7 @@ SRCS = \
 OBJS = $(SRCS:.cpp=.o)
 
 CXX = g++
-CXXFLAGS = -O2
+CXXFLAGS = -O2 -Wall
 CPPFLAGS = -I../ffmpeg/include -I../import -I/usr/local/include \
 	-I. -DQT3_SUPPORT -DHAVE_LIB_MAD -DHAVE_LIB_A52 -DHAVE_LIB_AO \
 	-I$(QTDIR)/include/Qt -I$(QTDIR)/include/QtCore \
@@ -81,12 +81,12 @@ OPT.ffmpeg = \
 	fi
 clean:
 	-rm -f *.o moc_*.cpp
-	-rm -rf ../ffmpeg/lib ../ffmpeg/include
 	-cd ../ffmpeg.src && $(MAKE) clean
 
 distclean: clean
-	# remove uic generated files as well
+	# remove uic generated files and ffmpeg as well
 	-rm -f uic_*.cpp
+	-rm -rf ../ffmpeg/lib ../ffmpeg/include
 	-rm -f .depend stamp-depend
 
 dep: stamp-depend
